# StorageManager

./: CMakeLists.txt  README.md  main.cpp
structure_module/: CMakeLists.txt
structure_module/include/: Cell.h  SLinkedList.h  SNode.h  Section.h  SectionDAO.h  Storage.h  StorageDAO.h
structure_module/src/: Cell.cpp  SLinkedList.cpp  Section.cpp  SectionDAO.cpp  Storage.cpp  StorageDAO.cpp
structure_module/src/substructures/: SLinkedList.cpp  SLinkedList.h  SNode.cpp  SNode.h
sub_module/: CMakeLists.txt
sub_module/include/: CellCreator.h  Creator.h  SectionCreator.h
sub_module/src/: CellCreator.cpp  SectionCreator.cpp
xml_module/: CMakeLists.txt
xml_module/include/: InMemoryDataService.h  XMLService.h
xml_module/src/: InMemoryDataService.cpp  XMLService.cpp
